--- a/ansible/scenarios/openstack-vm/Pulumi.yaml
+++ b/ansible/scenarios/openstack-vm/Pulumi.yaml
@@ -10,30 +10,13 @@ runtime:
 
 description: |
   CTF 靶機 Scenario：為每位玩家動態建立 OpenStack VM
-  - 建立獨立的 Security Group
-  - 建立 VM 並分配 Floating IP
-  - 輸出玩家連線資訊（IP、flag URL）
-  chall-manager 的 Janitor 會在時間到期後自動清理
+  遵循 chall-manager Scenario 規範：
+    - config key : openstack-vm:identity  （chall-manager 自動注入）
+    - output key : connection_info        （回傳玩家連線資訊）
+    - output key : flag                   （動態 flag）
 
+# ✅ 正確：chall-manager 只注入 identity 這一個 config key
+# 格式為 <project-name>:identity → openstack-vm:identity
 config:
-  # 這些值由 chall-manager 在每次部署時傳入
-  openstack-vm-challenge:player_id:
-    description: "玩家 ID（由 chall-manager 提供）"
-  openstack-vm-challenge:challenge_id:
-    description: "題目 ID（由 chall-manager 提供）"
-  # 以下為題目設定，固定值
-  openstack-vm-challenge:image_id:
-    description: "靶機 Image ID（從 platform 取得）"
-    default: "REPLACE_WITH_IMAGE_ID"
-  openstack-vm-challenge:flavor_name:
-    description: "靶機規格"
-    default: "general.small"
-  openstack-vm-challenge:network_id:
-    description: "連接的內部網路 ID"
-    default: "REPLACE_WITH_NETWORK_ID"
-  openstack-vm-challenge:floating_ip_pool:
-    description: "Floating IP 所在外部網路"
-    default: "public"
-  openstack-vm-challenge:challenge_port:
-    description: "題目對外 Port"
-    default: "8080"
+  openstack-vm:identity:
+    description: "由 chall-manager 自動注入的玩家唯一識別"
