refactor: 環境特定設定移出 git，改用 group_vars + defaults 分層
## 變數優先級架構重構

### 問題
UUIDs（image_id / network_id）和 flag 為環境特定設定，
不應 commit 進 git（不同環境不同值，且 flag 不應外洩）。

### 解決方案（Ansible 變數優先級由低至高）
  defaults/main.yml   ← 佔位符，可被 group_vars 覆蓋  [已 commit]
  group_vars/all/challenge.yml  ← 真實 UUID + flag       [gitignored]
  vars/main.yml       ← 固定不可覆蓋的 role 設定         [已 commit]

### 新增/修改
- ansible/roles/chall-manager/defaults/main.yml（新增）
  challenge_image_id / challenge_network_id / challenge_flavor /
  challenge_port / challenge_fip_pool / challenge_base_flag /
  challenge_flag_prefix 的佔位符預設值
- ansible/roles/chall-manager/vars/main.yml
  移除 challenge 設定區段，只保留固定的 role 設定
- ansible/group_vars/all/challenge.yml.example（新增）
  告知使用者如何從 tofu output 取得並填入真實 UUID
- .gitignore + ansible/.gitignore
  新增 group_vars/all/challenge.yml 排除規則

### 使用方式
  cp ansible/group_vars/all/challenge.yml.example \
     ansible/group_vars/all/challenge.yml
  # 填入 tofu output 的真實 UUID 與 flag

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ ansible/inventory/hosts.ini
 # Ansible Vault 實際檔案
 ansible/group_vars/all/vault.yml
 
+# 環境特定設定（UUID、IP、flag 等，因環境而異，不 commit）
+ansible/group_vars/all/challenge.yml
+
 # Ansible retry 紀錄
 *.retry
 
