fix: flag reliability, zip size, volume write, stale docs
fix(__main__.py): replace Unicode variate_flag with HMAC-SHA256
  Unicode 同形字替換會導致 CTFd flag 比對失敗（編碼差異、
  複製貼上不可見字元）；改用純 ASCII HMAC 後綴：
  flag = '{base_flag}_{HMAC-SHA256(key=base_flag,msg=identity)[:12]}'

fix(tasks/main.yml): exclude venv/* from OCI artifact zip
  venv 未排除導致 zip 可能達數百 MB，且容器內絕對路徑無效；
  新增 -x 'venv/*' 和 '*.egg-info/*'

fix(docker-compose.yml.j2): remove :ro from /scenarios mount
  chall-manager 執行 Pulumi 可能需要在 scenario 目錄寫入暫存檔；
  Pulumi state 已獨立存於 pulumi-state volume，移除 :ro 不影響隔離

chore(platform): remove stale docs
  CORRECTED_SUMMARY.md / FINAL_SUMMARY.md / FIXES_APPLIED.md /
  PRECONDITION_USAGE.md 已過時且與程式碼不符，易造成誤解

--- a/ansible/roles/chall-manager/tasks/main.yml
+++ b/ansible/roles/chall-manager/tasks/main.yml
@@ -150,8 +150,10 @@
     rm -f "${zip_file}"
     zip -r "${zip_file}" . \
       -x "*.git*" \
+      -x "venv/*" \
       -x "__pycache__/*" \
       -x "*.pyc" \
+      -x "*.egg-info/*" \
       -x "Dockerfile" \
       -x ".DS_Store"
 
