fix: etcd volume path, add explicit command, pin all image versions
fix(docker-compose.yml.j2): etcd data directory
  官方 etcd image 資料目錄為 /var/lib/etcd（非 /var/etcd）；
  掛錯路徑導致重啟後 lock 狀態丟失、比賽期間可能 lock 不一致
  同時加入明確的 command 區段，確保各版本啟動參數一致

chore(vars): pin image versions for production stability
  latest/master/main tag 在重新部署時可能拉到 breaking change：
  - chall-manager: latest → v0.7.0
  - CTFd:          master  → v3.7.3
  - chall-manager plugin:  main → v0.8.0

--- a/ansible/roles/ctfd/vars/main.yml
+++ b/ansible/roles/ctfd/vars/main.yml
@@ -2,7 +2,9 @@
 
 ctfd_deploy_dir: "/opt/ctfd"
 ctfd_repo_url: "https://github.com/CTFd/CTFd.git"
-ctfd_version: "master"
+# ✅ 釘定版本，避免 master 拉到不相容的 breaking change
+# 更新前請先在測試環境驗證
+ctfd_version: "v3.7.3"
 
 # ctfd-chall-manager 前端外掛
-ctfd_chall_manager_version: "main"
+ctfd_chall_manager_version: "v0.8.0"
