--- a/ansible/roles/ctfd/vars/main.yml
+++ b/ansible/roles/ctfd/vars/main.yml
@@ -4,7 +4,7 @@ ctfd_deploy_dir: "/opt/ctfd"
 ctfd_repo_url: "https://github.com/CTFd/CTFd.git"
 # ✅ 釘定版本，避免 master 拉到不相容的 breaking change
 # 更新前請先在測試環境驗證
-ctfd_version: "v3.7.3"
+ctfd_version: "3.8.1"
 
 # ctfd-chall-manager 前端外掛
 ctfd_chall_manager_version: "v0.8.3"
