--- a/ansible/roles/chall-manager/tasks/main.yml
+++ b/ansible/roles/chall-manager/tasks/main.yml
@@ -130,10 +130,13 @@
 # ── Build + Push scenario 為 OCI artifact（zip）──────────────
 # chall-manager 讀取的是 zip 格式的 OCI artifact，不是 Docker image
 # 使用 oras CLI 推送 zip 到 local registry
-- name: 找出所有含 Pulumi.yaml 的 scenario 目錄
+- name: 找出所有含 Pulumi.yaml 或 Pulumi.yml 的 scenario 目錄
   find:
     paths: "{{ chall_manager_scenarios_dir }}"
-    patterns: "Pulumi.yaml"
+    # ✅ 同時支援 .yaml 和 .yml 兩種副檔名
+    patterns:
+      - "Pulumi.yaml"
+      - "Pulumi.yml"
     recurse: yes
   register: scenario_pulumifiles
 
@@ -142,10 +145,22 @@
     set -e
     scenario_dir="{{ item.path | dirname }}"
     scenario_name="{{ item.path | dirname | basename }}"
-    image_tag="{{ registry_url }}/${scenario_name}:latest"
     zip_file="/tmp/${scenario_name}.zip"
+    state_file="/tmp/.scenario_${scenario_name}_hash"
 
-    echo "==> Preparing Python venv for ${scenario_name} ..."
+    # ── 計算 source 內容 hash（排除 venv/pyc 等非源碼檔）─────
+    src_hash=$(find "${scenario_dir}" \
+      -not -path "*/venv/*" \
+      -not -path "*/__pycache__/*" \
+      -not -name "*.pyc" \
+      -not -name "*.egg-info" \
+      -type f | sort | xargs sha256sum 2>/dev/null | sha256sum | cut -c1-12)
+
+    prev_hash=$(cat "${state_file}" 2>/dev/null || echo "")
+    versioned_tag="{{ registry_url }}/${scenario_name}:${src_hash}"
+    latest_tag="{{ registry_url }}/${scenario_name}:latest"
+
+    echo "==> Preparing Python venv for ${scenario_name} (hash=${src_hash}) ..."
     cd "${scenario_dir}"
 
     if [ -f requirements.txt ]; then
@@ -165,26 +180,57 @@
       -x "Dockerfile" \
       -x ".DS_Store"
 
-    echo "==> Pushing OCI artifact → ${image_tag} ..."
+    # ── Push with content-hash tag（blobs 相同時快速完成）──────
+    echo "==> Pushing OCI artifact → ${versioned_tag} ..."
+    cd /tmp
     oras push \
       --insecure \
       --disable-path-validation \
-      "${image_tag}" \
-      "${zip_file}:application/zip"
+      "${versioned_tag}" \
+      "${scenario_name}.zip:application/zip"
+
+    # ✅ 強制把 :latest 指向剛推的內容 hash tag
+    # 確保 :latest 一定是最新版本，不依賴 push 是否 skip
+    echo "==> Tagging :latest → ${versioned_tag} ..."
+    oras tag --insecure "${versioned_tag}" "latest"
 
     rm -f "${zip_file}"
-    echo "done:${image_tag}"
+
+    # ── 比較 hash，決定是否需要重啟 chall-manager ─────────────
+    if [ "${src_hash}" != "${prev_hash}" ]; then
+      echo "${src_hash}" > "${state_file}"
+      echo "changed:${latest_tag}"
+    else
+      echo "unchanged:${latest_tag}"
+    fi
   args:
     executable: /bin/bash
   loop: "{{ scenario_pulumifiles.files }}"
   register: build_results
+  # ✅ async+loop 下 changed_when 無法可靠引用 build_results，
+  # 改為執行後用獨立 task 判斷需否 restart
+  changed_when: false   # 由下方 restart task 處理
   async: 600
   poll: 15
 
 - name: 顯示 build 結果
   debug:
-    msg: "{{ item.stdout_lines | default([]) | select('match', '^(==>|done:)') | list }}"
+    msg: "{{ item.stdout_lines | default([]) | select('match', '^(==>|done:|changed:|unchanged:)') | list }}"
   loop: "{{ build_results.results }}"
+
+# ✅ 若任一 scenario source 有變更，重啟 chall-manager 以載入新 artifact
+- name: 重啟 chall-manager（若有 scenario 更新）
+  community.docker.docker_compose_v2:
+    project_src: "{{ chall_manager_dir }}"
+    services:
+      - chall-manager
+    state: present
+    recreate: always
+  when: >-
+    build_results.results
+    | selectattr('stdout', 'defined')
+    | selectattr('stdout', 'search', 'changed:')
+    | list | length > 0
 
 # ── 確認 chall-manager Port 就緒 ──────────────────────────────
 # chall-manager 是 gRPC 服務，沒有 REST /health endpoint
