feat: rewrite scenario from Python to Go (chall-manager only supports Go)
## 背景
chall-manager Docker image 只內建 Go runtime（自身是 Go 寫的），
不支援 Python Pulumi program。Scenario 必須是預編譯的 Go binary。

## 新增檔案
- ansible/scenarios/openstack-vm/main.go
  OpenStack VM scenario 完整 Go 實作：
  * config.Require('identity') — chall-manager 唯一注入的 key
  * MD5(identity)[:8] → resource prefix（無截斷衝突）
  * SecurityGroup + SecGroupRule + Instance + FloatingIp + FloatingIpAssociate
  * compute.NewFloatingIpAssociate(instance_id) — 無 Port data source 競速
  * HMAC-SHA256 動態 flag（純 ASCII）
  * output: connection_info / flag / ssh_command / floating_ip

- ansible/scenarios/openstack-vm/go.mod
  module openstack-vm，依賴 pulumi-openstack/sdk/v4 + pulumi/sdk/v3

## 修改檔案
- ansible/scenarios/openstack-vm/Pulumi.yml
  runtime: go, binary: ./main
- ansible/roles/chall-manager/tasks/main.yml
  * 移除 python3-venv 安裝
  * 新增 Go 安裝（/usr/local/go, idempotent）
  * build task 改用 go mod tidy && go build -o main .
  * oras push 格式：主 binary + Pulumi.yml 為獨立 layer
    (--artifact-type application/vnd.ctfer-io.scenario)
- ansible/roles/chall-manager/vars/main.yml: 新增 go_version: 1.22.3
- .gitignore: 新增排除 ansible/scenarios/openstack-vm/main（binary）

## 刪除檔案
- ansible/scenarios/openstack-vm/__main__.py（Python 版本）
- ansible/scenarios/openstack-vm/requirements.txt（Python 依賴）

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+# ── Go ────────────────────────────────────────────────────
+# 編譯好的 scenario binary（由 Ansible 在目標機建置，不進 git）
+ansible/scenarios/openstack-vm/main
+
 # ── Ansible ───────────────────────────────────────────────
 # 主機清單（含真實 IP 與 SSH 金鑰路徑）
 ansible/inventory/hosts.ini
