fix: IaC-level OCI cache bug prevention (tmpfs + auto-clear)
## 做法一：docker-compose tmpfs（根治）
chall-manager /root/.cache/chall-manager 改為 tmpfs 掛載（512MB RAM）。
容器每次重啟自動清空，stale Pulumi.hash.yaml 永遠不存在。
同時 RAM I/O 比 disk 快，scenario 解壓縮更迅速。

## 做法二：Ansible 主動清除 cache（保險）
偵測到 scenario source 有變更（changed: in stdout）時，
在重啟 chall-manager 前先執行：
  docker exec chall-manager-chall-manager-1 rm -rf /root/.cache/chall-manager
ignore_errors: yes 避免容器未啟動時阻斷 playbook。

兩層防護確保：無論何種情況，stale OCI cache 都不會殘留到重啟後。

--- a/ansible/roles/chall-manager/tasks/main.yml
+++ b/ansible/roles/chall-manager/tasks/main.yml
@@ -239,7 +239,22 @@
     msg: "{{ item.stdout_lines | default([]) | select('match', '^(==>|done:|changed:|unchanged:)') | list }}"
   loop: "{{ scenario_build_results.results }}"
 
+# ✅ 做法二：偵測到 scenario 更新時，先清除 chall-manager OCI cache
+# 確保 tmpfs（做法一）萬一未啟用時 stale cache 也不會殘留
+# ignore_errors: yes 避免容器未啟動時阻斷 playbook
+- name: 清除 chall-manager OCI cache（避免 stale file 衝突）
+  command: >
+    docker exec chall-manager-chall-manager-1
+    rm -rf /root/.cache/chall-manager
+  ignore_errors: yes
+  when: >-
+    scenario_build_results.results
+    | selectattr('stdout', 'defined')
+    | selectattr('stdout', 'search', 'changed:')
+    | list | length > 0
+
 # ✅ 若任一 scenario source 有變更，重啟 chall-manager 以載入新 artifact
+# （tmpfs 的 /root/.cache/chall-manager 在重啟後自動清空，double protection）
 - name: 重啟 chall-manager（若有 scenario 更新）
   community.docker.docker_compose_v2:
     project_src: "{{ chall_manager_dir }}"
