fix(chall-manager): add janitor, fix CM_DIRECTORY persistence and FIP association
- Add chall-manager-janitor service with correct --url/--ticker flags
- Fix CM_DIRECTORY from /scenarios to persistent /chall-manager-data volume
- Add chall-manager-data named volume to prevent state loss on restart
- Fix OCI cache dir pre-creation to avoid Docker creating it as root
- Add chall_manager_janitor_ticker to defaults (configurable, default 30s)
- Switch docker_compose_v2 to recreate:auto for reliable config-hash detection
- Fix FIP association: use explicit networking.NewPort instead of relying on
  instance.Networks.Port() which returns empty in pulumi-openstack SDK v3

--- a/ansible/roles/chall-manager/defaults/main.yml
+++ b/ansible/roles/chall-manager/defaults/main.yml
@@ -20,3 +20,7 @@ challenge_fip_pool:   "public"
 # ── 動態 flag（不含 CTF{} wrapper）──────────────────────────
 challenge_base_flag:    "REPLACE_IN_group_vars_all_challenge.yml"
 challenge_flag_prefix:  "CTF"
+
+# ── Janitor 設定 ──────────────────────────────────────────
+# 多久掃描一次過期的 instance（支援 Go duration 格式：30s, 1m, 5m）
+chall_manager_janitor_ticker: "30s"
